# behavior_camera

./: .gitignore  README.md  WINDOWS_SETUP.md  config.yaml  pyproject.toml  test_camera.py
behavior_camera/: __init__.py  camera.py  cli.py  config.py  main.py  recorder.py  usb_camera.py
gxipy/: __init__.py  gxiapi.py
